@@ -7,6 +7,7 @@ all_from 'lib/Catalyst/Component/ACCEPT_CONTEXT.pm';
 
 requires 'Catalyst';
 requires 'Scalar::Util';
+requires 'MRO::Compat';
 build_requires 'Devel::Cycle';
 auto_install;
 WriteAll;
